# stablehlo

build_tools/: build_mlir_with_rust_bindings.sh
stablehlo/dialect/: Register.cpp
stablehlo/integrations/rust/bindings/: Cargo.toml  build.rs
stablehlo/integrations/rust/bindings/src/: main.rs
stablehlo/integrations/rust/melior/macro/: Cargo.toml
stablehlo/integrations/rust/melior/macro/src/: dialect.rs  lib.rs
stablehlo/integrations/rust/melior/melior/: Cargo.toml
stablehlo/integrations/rust/melior/melior/src/dialect/: ods.rs  registry.rs
stablehlo/integrations/rust/melior/melior/src/dialect/llvm/: type.rs
stablehlo/integrations/rust/melior/melior/src/dialect/snapshots/: melior__dialect__llvm__tests__compile_undefined.snap
stablehlo/integrations/rust/melior/melior/src/pass/: sparse_tensor.rs
stablehlo/integrations/rust/mlir-sys/: build.rs
stablehlo/integrations/rust/stablehlo-sys/: Cargo.toml  build.rs  wrapper.hpp
stablehlo/integrations/rust/stablehlo-sys/src/: lib.rs
stablehlo/integrations/rust/tblgen-rs/: Cargo.toml  build.rs
