[package]
name = "melior-test"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
melior = { path = "../melior/melior" , features = ["ods-dialects"] }

tblgen = { path = "../tblgen-rs", features = ["llvm18-0"] }
mlir-sys = { path = "../mlir-sys" }
stablehlo-sys = { path = "../stablehlo-sys" }
